// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavItem renders correctly 1`] = `
<li
  class="c-nav-item"
>
  <a
    class="c-nav-link"
    href="#"
    target="_self"
  />
</li>
`;

exports[`CNavItem renders correctly 2`] = `
<li
  class="c-nav-item"
>
  <a
    aria-disabled="true"
    class="c-nav-link c-disabled"
    href="#"
    tabindex="-1"
    target="_self"
  >
    CNavItem text
  </a>
</li>
`;
